fix: prevent overflow of form block overlay

--- a/blocks/donation-form/edit/scss/controls.scss
+++ b/blocks/donation-form/edit/scss/controls.scss
@@ -15,6 +15,7 @@
 		color: #fff;
 		opacity: 0;
 		transition: opacity 0.3s ease;
+		overflow: hidden;
 
 		&:hover {
 			opacity: 1;
